--- a/index.html
+++ b/index.html
@@ -1,23 +1,57 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
-
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+      content="width=device-width, initial-scale=1.0, maximum-scale=1"
+    />
     <title>Treino Inteligente: Hipertrofia na Prática</title>
-    <meta name="description" content="O guia definitivo + planilha editável para conquistar hipertrofia consistente, mesmo treinando sozinho. PDF explicativo + Spreadsheet inteligente." />
-    
+    <meta
+      name="description"
+      content="O guia definitivo + planilha editável para conquistar hipertrofia consistente, mesmo treinando sozinho. PDF explicativo + Spreadsheet inteligente."
+    />
+
     <!-- Google Fonts: Space Grotesk (headlines) + Inter (body) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- ============================================== -->
+    <!-- Microsoft Clarity - Analytics Completo -->
+    <!-- ============================================== -->
+    <!-- 
+      PASSO 1: Acesse https://clarity.microsoft.com/
+      PASSO 2: Crie um projeto (grátis, sem cartão)
+      PASSO 3: Copie seu ID e substitua 'YOUR_CLARITY_ID' abaixo
+      
+      O que você vai ver:
+      ✅ Gravações das sessões (como vídeo do usuário navegando)
+      ✅ Heatmaps (onde as pessoas clicam)
+      ✅ Scroll depth (até onde scrollam)
+      ✅ Rage clicks (quando tentam clicar e não funciona)
+    -->
+    <script type="text/javascript">
+      (function (c, l, a, r, i, t, y) {
+        c[a] =
+          c[a] ||
+          function () {
+            (c[a].q = c[a].q || []).push(arguments);
+          };
+        t = l.createElement(r);
+        t.async = 1;
+        t.src = "https://www.clarity.ms/tag/" + i;
+        y = l.getElementsByTagName(r)[0];
+        y.parentNode.insertBefore(t, y);
+      })(window, document, "clarity", "script", "v0ubmwmsk7");
+    </script>
   </head>
 
-  <body style="font-family: 'Inter', sans-serif;">
+  <body style="font-family: 'Inter', sans-serif">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
-
 </html>
